2009-05-02  Sebastien Pouliot  <sebastien@ximian.com>

	* X509Certificate.cs: Remove code to initialize from an handle
	in NET_2_1 since this is only possible from Windows and would be
	SC anyway.

2009-04-30  Sebastien Pouliot  <sebastien@ximian.com> 

	* X509Certificate.cs: Remove CreateFromSignedFile from NET_2_1 
	since it's unneeded and bring more code and [SecuritySafeCritical]
	API into the assemblies.

2008-08-18  Sebastien Pouliot  <sebastien@ximian.com>

	* X509Certificate[20].cs: Silverlight 2.0 does not implement either
	IDeserializationCallback or ISerializable interfaces for this type.

2008-08-08  Sebastien Pouliot  <sebastien@ximian.com>

	* X509Certificate20.cs: Remove reference to X509ContentType.Pfx and
	SerializedCert since they are not available in SL 2.0
	* X509ContentType.cs: Remove values not available in SL 2.0
	* X509KeyStorageFlags.cs: Remove values not available in SL 2.0

2008-07-02  Andreas Nahr  <ClassDevelopment@A-SoftTech.com>

	* X509Certificate.cs: Fix parameter names

2008-01-12  Sebastien Pouliot  <sebastien@ximian.com>

	* X509Certificate.cs: Don't wrap our own COMException inside another
	one. This will provide a better error message to the user (or tool)

2007-01-05  Sebastien Pouliot  <sebastien@ximian.com>

	* X509Certificate.cs: Now that the ASN.1 converted DateTime is 
	"clearly" UTC (in 2.0) we need to adjust GetEffectiveDateString and 
	GetExpirationDateString methods to return the local time.

2006-11-17  Sebastien Pouliot  <sebastien@ximian.com>

	* X509Certificate.cs: Fix Equals to throw a CryptographicException, in
	2.0 profile, if the certificate instance is empty.
	* X509Certificate20.cs: Fix Reset method to reset every fields (as the
	instance can be reused in 2.0). Updated MonoTODO attributes.

2006-11-08  Sebastien Pouliot  <sebastien@ximian.com>

	* X509Certificate.cs: Refactored 2.0 support (partial class) and added
	some missing features. All unit tests now works in both 1.x and 2.0.